--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,13 @@ a:visited {
     color: #ffffff;
 }
 
+a,
+a:visited {
+    font-family: "Orbitron-Black";
+    text-transform: uppercase;
+    color: #ffffff;
+}
+
 a:hover,
 a:focus,
 a:active {
@@ -172,8 +179,24 @@ BUTTON STYLE
 	font-size: 15px;
 }
 
-.button-comment {
+.button-desk {
 	margin-left: 5%;
+}
+
+.button-spacer {
+	margin-bottom: 30px;
+}
+
+.button-footer {
+    font-family: "Orbitron-Medium";
+	background: transparent;
+    color: white;
+    border: transparent;
+    font-size: 35px;
+ 	padding: 7px 0px;
+    text-transform: uppercase;
+    border-radius: 20px;
+    margin-top: 23px;
 }
 
 /* ***********************************************
@@ -239,13 +262,15 @@ NAVIGATION MOBILE STYLES
     display: none;
 }
 
+/*
 .mobile-nav .hamburger-container {
     float: right;
-    margin-top: 5px;
+    padding-top: -30px;
     padding: 0;
     width: calc(100% - 60px);
     text-align: right;
 }
+*/
 
 .mobile-nav .logo-container {
     display: inline-block;
@@ -420,13 +445,14 @@ FLAGSHIP FROSTED GLASS (DESKTOP) STYLES
 *********************************************** */
 
 .frosted-glass {
-    height: 700px;
+    height: 750px;
     z-index: 4;
     position: relative;
     overflow: hidden;
     box-shadow: 0 0 0 1px hsla(0,0%,100%,.3) inset, 0 .5em 1em rgba(0, 0, 0, 0.6);
     text-shadow: 0 1px 1px hsla(0,0%,100%,.3);
     padding-top: 35px;
+	padding-bottom: 100px;
     text-align: center;
 }
 
@@ -460,12 +486,24 @@ FLAGSHIP FROSTED GLASS (DESKTOP) STYLES
 }
 */
 
+.frosted-glass .button {
+    font-family: "Lato-Bold";
+	background: transparent;
+    color: white;
+    border: 4px solid white;
+    font-size: 40px;
+ 	padding: 7px 30px;
+    text-transform: uppercase;
+    border-radius: 20px;
+    margin-top: 23px;
+}
+
 .frosted-effect, .frosted-glass::before {
     background: url("../img/Kyoto.jpg") 0 / cover fixed;
 }
 
 .frosted-effect a, a:visited {
-    color: #000000;
+/*    color: white;*/
     transition: .3s;
     transform:scale(1);
     text-transform: none;
@@ -473,9 +511,9 @@ FLAGSHIP FROSTED GLASS (DESKTOP) STYLES
 
 .frosted-effect a:hover, a:focus, a:active {
     text-decoration: none;
-    color: #000000;
+    color: #006099;
     transform: scale(1.05);
-    border-color: white;
+    border-color: #006099;
     text-transform: none;
 }
 
@@ -516,16 +554,23 @@ FLAGSHIP GRADIENT (MOBILE) STYLES
 }
 
 .gradient {
-    height: 1900px;
+    height: calc(100vh - 10%);
     z-index: 4;
     position: relative;
     overflow: hidden;
     box-shadow: 0 0 0 1px hsla(0,0%,100%,.3) inset, 0 .5em 1em rgba(0, 0, 0, 0.6);
     text-shadow: 0 1px 1px hsla(0,0%,100%,.3);
-    padding-top: 100px;
+    padding-top: 50px;
+	padding-bottom: 50px;
     text-align: center;
     background: url("../img/leather.jpg") 100%;
 }
+/*
+
+.gradient h2 {
+	padding-bottom: 60px;
+}
+*/
 
 /* ***********************************************
 HALO STYLES
@@ -619,6 +664,11 @@ footer .logo {
     color: #ffffff;
 }
 
+.social-icons-footer li {
+	display: inline-block;
+	margin-right: 8px;
+}
+
 footer h1 {
     font-size: 15px;
 	text-transform: none;
@@ -626,7 +676,7 @@ footer h1 {
 }
 
 footer a, a:visited {
-    color: #ffffff;
+/*    color: #ffffff;*/
     font-family: "Lato-Bold";
     font-size: 12px;
 }
@@ -679,21 +729,21 @@ footer .mobile-nav {
 }
 
 .drop-down a:hover, a:focus, a:active {
-    background: #075583;
-    opacity: 1;
-    text-transform: uppercase;
-    transform: none;
+    color: #075583;
+    border-color: #075583;
 }
 
-.drop-down-menu {
+.mobile-footer-menu {
     display: block;
 }
 
+/*
 .drop-down-menu span {
 	display:inline;
 	float:right;
 	position:relative;
 }
+*/
 
 .menu-title {
     align-self: center;
@@ -799,6 +849,7 @@ PAGE 2
 
 .history-text-container h3 {
   color: white;
+	font-size: 30px;
 }
 
 
@@ -1004,6 +1055,10 @@ PAGE 3
         rgba(0, 9, 14, 1));
 }
 
+.mobile-nav .contact-container {
+	height: 682px;
+}
+
 .mobile-nav .hero {
     height: calc(83vh - 60px);
     width: auto;
@@ -1017,7 +1072,6 @@ PAGE 3
 
 .contact-overlay {
     width: 100%;
-    height: 100vh;
     background-image: url("../img/contact.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -1049,6 +1103,11 @@ input {
     padding-left: 10px;
 }
 
+.mobile-nav input {
+    width: 95%;
+    margin-left: 0%;
+}
+
 textarea {
     margin-bottom: 15px;
     border-radius: 15px;
@@ -1059,6 +1118,11 @@ textarea {
     margin-left: 5%;
     border: white solid 5px;
     padding-left: 10px;
+}
+
+.mobile-nav textarea {
+	width: 95%;
+	margin-left: 0%;
 }
 
 textarea:focus {
@@ -1113,3 +1177,117 @@ input[type=text]:focus {
     font-size: 18px;
 }
 */
+
+
+
+/*HAMBURGER MENU*/
+
+
+body { 
+  overflow-x: hidden;
+}
+
+.menu-toggle
+{
+  display: block;
+  position: absolute;
+  top: 50px;
+  right: 50px;
+  
+  z-index: 1;
+  
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.menu-toggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -3px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 2;
+  
+  -webkit-touch-callout: none;
+}
+
+.menu-toggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 15px;
+  position: relative;
+  margin-top: -10px;
+  background: white;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+.menu-toggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+.menu-toggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+.menu-toggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #006099;
+}
+
+.menu-toggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+.menu-toggle input:checked ~ span:nth-last-child(2) {
+  opacity: 1;
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+
+.menu {
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 0;
+  padding: 50px;
+  padding-top: 125px;
+  right: -100px;
+  background: #033751;
+  background-image: linear-gradient(
+        180deg,
+        rgba(7, 85,131, 0),
+        rgba(0, 9, 14, 1));
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+.menu li {
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+.menu-toggle input:checked ~ ul {
+  transform: scale(1.0, 1.0);
+  opacity: 1;
+}
