--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@ a:active {
     color: #006099;
     border-color: #006099;
 	text-transform: uppercase;
+      transition: .3s;
 }
 
 ul {
@@ -148,13 +149,13 @@ body, html {
     float: left;
 }
 
-.logo {
-    background-image: url("../img/icon.png");
-    width: 50px;
-    height: 50px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    float: left;
+.logo:hover,
+.logo:focus,
+.logo:active {
+    box-shadow: 0 0 0 1px hsla(0,0%,100%,.3) inset, 0 .5em 1em rgba(0, 0, 0, 0.6);
+    border-radius: 50%;
+    background-color: red;
+    transition: .3s;
 }
 
 /* ***********************************************
@@ -516,6 +517,7 @@ FLAGSHIP FROSTED GLASS (DESKTOP) STYLES
     transform: scale(1.05);
     border-color: #006099;
     text-transform: none;
+    transition: .3s;
 }
 
 .image-circle {
@@ -686,6 +688,7 @@ footer a:hover, a:focus, a:active {
     text-decoration: none;
     color: #ffffff;
     opacity: .7;
+    transition: .3s;
 }
 
 /* ***********************************************
@@ -732,6 +735,7 @@ footer .mobile-nav {
 .drop-down a:hover, a:focus, a:active {
     color: #075583;
     border-color: #075583;
+    transition: .3s;
 }
 
 .mobile-footer-menu {
@@ -1184,7 +1188,7 @@ input[type=text]:focus {
 /*HAMBURGER MENU*/
 
 
-body { 
+body {
   overflow-x: hidden;
 }
 
@@ -1194,9 +1198,9 @@ body {
   position: absolute;
   top: 50px;
   right: 50px;
-  
+
   z-index: 1;
-  
+
   -webkit-user-select: none;
   user-select: none;
 }
@@ -1212,7 +1216,7 @@ body {
   cursor: pointer;
   opacity: 0;
   z-index: 2;
-  
+
   -webkit-touch-callout: none;
 }
 
@@ -1243,7 +1247,7 @@ body {
   transform-origin: 0% 100%;
 }
 
-/* 
+/*
  * Transform all the slices of hamburger
  * into a crossmark.
  */
